Dropping Image not using relative paths in some cases #42649

Closed
opened 2014-11-19 17:10:57 +01:00 by Pablo Vazquez · 7 comments
Member

System Information
Ubuntu GNOME 14.04, Nvidia GTX 760

Blender Version
Broken: Latest master (Wed November 19th)

Short description of error
When dropping an image in the Image Editor, the path is nice relative. But when dropping an image on the Nodes Editor, it gets an absolute path. I noticed it also happens when dropping on the 3D View to set as Background Image. I guess there might be other cases but haven't tested.

Exact steps for others to reproduce the error

  • Open Blender
  • Save .blend (so it knows where to point relative paths)
  • Drag an image from your file browser and drop it on the Nodes Editor, or some other places (see description above). Notice it gets an absolute path.
  • Optional: Drop another image on the Image Editor, see how it gets relative path instead.

Thank you very much for your time!

**System Information** Ubuntu GNOME 14.04, Nvidia GTX 760 **Blender Version** Broken: Latest master (Wed November 19th) **Short description of error** When dropping an image in the Image Editor, the path is nice relative. But when dropping an image on the Nodes Editor, it gets an absolute path. I noticed it also happens when dropping on the 3D View to set as Background Image. I guess there might be other cases but haven't tested. **Exact steps for others to reproduce the error** - Open Blender - Save .blend (so it knows where to point relative paths) - Drag an image from your file browser and drop it on the Nodes Editor, or some other places (see description above). Notice it gets an absolute path. - Optional: Drop another image on the Image Editor, see how it gets relative path instead. Thank you very much for your time!
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @pablovazquez

Added subscriber: @pablovazquez
Julian Eisel was assigned by Campbell Barton 2014-11-19 17:12:16 +01:00

This issue was referenced by c05785ec93

This issue was referenced by c05785ec93d3b7c38d2b7b5070bb7ad124dd68dc
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit c05785ec93.

Closed by commit c05785ec93.

This issue was referenced by b68166355ac5e046cb1033123798277a081a2811

This issue was referenced by b68166355ac5e046cb1033123798277a081a2811

This issue was referenced by a73b6c8d236d1b68dd80a748eeaed53d08f5a883

This issue was referenced by a73b6c8d236d1b68dd80a748eeaed53d08f5a883
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42649
No description provided.